# PyEMS

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  README.md  install.sh  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: launch.json
config/: default_site.yaml  site.sim.yaml  site.yaml
config/examples/: site.pv_genset.yaml
deploy/: DEPLOY.md  pyems-polkit.rules  pyems-time-apply.service  pyems-time-manual.service  pyems-time-schedule.timer  pyems-time-sync-now.service  pyems-time-sync.service  pyems-ui.service  pyems.service
documents/: control-design-references.md  internal-tags.md  simulation.md  tag-map.sim.md  tag-workflow.md
profiles/gensets/: example_genset.yaml
src/: channels.py  ems.py  logging_config.py  scheduler.py
src/controllers/: base.py  (+3 more)
tests/: conftest.py  test_allocation_integration.py  test_allocator.py  test_cached.py  test_channels.py  test_commands.py  test_composite.py  test_connection_point_import_limit.py  test_connection_point_power.py  test_device_fields.py  test_ems_build.py  test_ems_manager.py  test_generation_gate.py  test_grid_export_limit.py  test_hard_switch.py  test_logging_config.py  test_modbus_device.py  test_modbus_tcp_integration.py  test_network.py  test_recording.py  test_registry.py  test_request_board.py  test_safety.py  test_scheduler.py  test_setpoint_compliance.py  test_setpoint_headroom.py  test_system_tags.py  test_tag_registry.py  test_telemetry.py  test_time.py  test_time_service.py  test_ui.py  test_ui_scenario_settings.py  test_ui_schema.py  test_ui_sim.py  test_validation.py
(+81 files in other folders)
